2006-08-09  Szilveszter Farkas <Szilveszter.Farkas@gmail.com>

    * olive.glade: added Rename dialog
    * olive/frontend/gtk/rename.py: implemented OliveRename
    * olive/frontend/gtk/handler.py: added Rename signal handler
    * olive/frontend/gtk/__init__.py: fixed the double-click Bookmarks bug
    * olive/frontend/gtk/move.py: implemented OliveMove
    * olive/frontend/gtk/handler.py: added Move signal handler
    * olive.glade: added Move dialog
    * olive/backend/errors.py: added NotSameBranchError
    * olive/backend/fileops.py: added NotBranchError and NotSameBranchError
      support to move()
    * olive/backend/fileops.py: added NotBranchError support to mkdir()
    * olive/frontend/gtk/mkdir.py: implemented OliveMkdir
    * olive/frontend/gtk/handler.py: added Make directory signal handler
    * olive.glade: added Make directory dialog
    * olive/backend/update.py: added NotBranchError support to pull()
    * olive/backend/__init__.py: added Branch/Pull signal
    * olive/backend/handler.py: implemented Branch/Pull signal handler
    * olive/frontend/gtk/status.py: fixed a NotBranchError related bug
    * olive.glade: diff and status window not visible by default

2006-08-08  Szilveszter Farkas <Szilveszter.Farkas@gmail.com>
    * olive.glade: some icons redrawn + added 16x16 icons
    * icons/*: some icons redrawn + added 16x16 icons
    * setup.py: modified respectively
    * olive/frontend/gtk/menu.py: Added left context menu + Bookmark option
    * olive/frontend/gtk/__init__.py: load bookmarks into the left panel
    * olive/frontend/gtk/handler.py: implemented signal handlers for left panel
    * olive.glade: added signals for the bookmark TreeView
    * cmenu.ui: added description for bookmark context menu
    * olive/frontend/gtk/__init__.py: implemented OlivePreferences - this class
      is responsible for loading/saving user preferences
    * olive/frontend/gtk/handler.py: save preferences before quit