@@ -1,5 +1,7 @@
 2006-08-09  Szilveszter Farkas <Szilveszter.Farkas@gmail.com>
 
+    * olive/frontend/gtk/__init__.py: simplified preference handling
+    * olive/frontend/gtk/handler.py: window preferences are stored on quit
     * olive.glade: added Rename dialog
     * olive/frontend/gtk/rename.py: implemented OliveRename
     * olive/frontend/gtk/handler.py: added Rename signal handler
